lustre/llite/lproc_llite.c
@@ -775,7 +775,7 @@ static int ll_max_easize_seq_show(struct seq_file *m, void *v)
 }
 LPROC_SEQ_FOPS_RO(ll_max_easize);
 
-static int ll_defult_easize_seq_show(struct seq_file *m, void *v)
+static int ll_default_easize_seq_show(struct seq_file *m, void *v)
 {
 	struct super_block *sb = m->private;
 	struct ll_sb_info *sbi = ll_s2sbi(sb);
@@ -788,7 +788,7 @@ static int ll_defult_easize_seq_show(struct seq_file *m, void *v)
 
 	return seq_printf(m, "%u\n", ealen);
 }
-LPROC_SEQ_FOPS_RO(ll_defult_easize);
+LPROC_SEQ_FOPS_RO(ll_default_easize);
 
 static int ll_max_cookiesize_seq_show(struct seq_file *m, void *v)
 {
@@ -805,7 +805,7 @@ static int ll_max_cookiesize_seq_show(struct seq_file *m, void *v)
 }
 LPROC_SEQ_FOPS_RO(ll_max_cookiesize);
 
-static int ll_defult_cookiesize_seq_show(struct seq_file *m, void *v)
+static int ll_default_cookiesize_seq_show(struct seq_file *m, void *v)
 {
 	struct super_block *sb = m->private;
 	struct ll_sb_info *sbi = ll_s2sbi(sb);
@@ -818,7 +818,7 @@ static int ll_defult_cookiesize_seq_show(struct seq_file *m, void *v)
 
 	return seq_printf(m, "%u\n", cookielen);
 }
-LPROC_SEQ_FOPS_RO(ll_defult_cookiesize);
+LPROC_SEQ_FOPS_RO(ll_default_cookiesize);
 
 static int ll_sbi_flags_seq_show(struct seq_file *m, void *v)
 {
@@ -1009,11 +1009,11 @@ struct lprocfs_seq_vars lprocfs_llite_obd_vars[] = {
 	{ .name	=	"max_easize",
 	  .fops =	&ll_max_easize_fops			},
 	{ .name	=	"default_easize",
-	  .fops =	&ll_defult_easize_fops			},
+	  .fops =	&ll_default_easize_fops			},
 	{ .name	=	"max_cookiesize",
 	  .fops =	&ll_max_cookiesize_fops			},
 	{ .name	=	"default_cookiesize",
-	  .fops =	&ll_defult_cookiesize_fops		},
+	  .fops =	&ll_default_cookiesize_fops		},
 	{ .name	=	"sbi_flags",
 	  .fops =	&ll_sbi_flags_fops			},
 	{ .name	=	"xattr_cache",
